feat: makes internal error helper
