# shop-api-golang/docs/swagger.json
@@ -402,6 +402,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add a new product to the database",
                 "consumes": [
                     "application/json"
